Replace deprecated use of Boolean constructor